before global data-transfer update